# pluginval

./: .gitignore  CMakeLists.txt  pluginval.jucer
Source/: Main.cpp  MainComponent.h  TestUtilities.h  Validator.cpp
Source/tests/: BasicTests.cpp
